# Generated by Django 5.2.13 on 2026-05-06 18:17

import django.db.models.deletion
import uuid
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('users', '0007_adminuser_learneruser'),
    ]

    operations = [
        migrations.CreateModel(
            name='Question',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('text', models.TextField(help_text='The question string')),
                ('choices', models.JSONField(default=list)),
                ('correct_answer_index', models.IntegerField()),
                ('tier', models.IntegerField(default=1, help_text='1=Concept, 2=Application, 3=Synthesis')),
            ],
        ),
        migrations.CreateModel(
            name='Topic',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('name', models.CharField(max_length=255)),
                ('description', models.TextField(blank=True, help_text='Short summary of the topic')),
            ],
        ),
        migrations.CreateModel(
            name='PracticeSession',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('session_type', models.CharField(choices=[('adaptive', 'Adaptive'), ('quiz', 'Quiz'), ('review', 'Review')], default='adaptive', max_length=20)),
                ('start_time', models.DateTimeField(auto_now_add=True)),
                ('end_time', models.DateTimeField(blank=True, null=True)),
                ('total_xp_earned', models.IntegerField(default=0)),
                ('learner', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='practice_sessions', to='users.learner')),
            ],
        ),
        migrations.CreateModel(
            name='SingleQuestionInteraction',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('user_response', models.CharField(blank=True, max_length=255, null=True)),
                ('is_correct', models.BooleanField(default=False)),
                ('question', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='questions.question')),
                ('session', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='interactions', to='questions.practicesession')),
            ],
        ),
        migrations.AddField(
            model_name='question',
            name='topic',
            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='questions', to='questions.topic'),
        ),
        migrations.CreateModel(
            name='Notification',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('sent_at', models.DateTimeField(auto_now_add=True)),
                ('responded_at', models.DateTimeField(blank=True, null=True)),
                ('learner', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='notifications', to='users.learner')),
                ('topics', models.ManyToManyField(to='questions.topic')),
            ],
        ),
        migrations.CreateModel(
            name='TopicMastery',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('difficulty', models.FloatField(default=5.0, help_text='FSRS difficulty parameter (1–10)')),
                ('stability', models.FloatField(default=1.0, help_text='FSRS stability in days')),
                ('reps', models.IntegerField(default=0, help_text='Number of successful reviews')),
                ('state', models.CharField(choices=[('new', 'New'), ('learning', 'Learning'), ('review', 'Review'), ('relearning', 'Relearning')], default='new', max_length=20)),
                ('last_review', models.DateTimeField(blank=True, null=True)),
                ('next_review', models.DateTimeField(blank=True, null=True)),
                ('learner', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='masteries', to='users.learner')),
                ('topic', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='questions.topic')),
            ],
            options={
                'unique_together': {('learner', 'topic')},
            },
        ),
    ]
