@startuml
!define Table(name,desc) class name as "desc" << (T,#FFAAAA) >>
!define primary_key(x) <b>x</b>
!define foreign_key(x) <i>x</i>
hide methods
hide stereotypes

Table(User, "User") {
  primary_key(id) : int
  email : varchar(255)
  user_type : enum
  -- Gamification --
  current_xp : int
  streak_count : int
}

Table(Topic, "Topic") {
  primary_key(id) : int
  name : varchar(100)
  description : text
}

Table(Question, "Question") {
  primary_key(id) : int
  foreign_key(topic_id) : int
  -- Scaffolding Logic --
  tier : int
  note: "1=Basic, 2=Medium, 3=Hard"
  question_type : enum
  question_text : text
  options : json
  correct_answer : varchar(255)
  feedback_text : text
}

Table(TopicMastery, "TopicMastery") {
  primary_key(id) : int
  foreign_key(student_id) : int
  foreign_key(topic_id) : int
  stability : float
  difficulty : float
  next_review : datetime
}

Table(Review, "Review") {
  primary_key(id) : int
  foreign_key(student_id) : int
  foreign_key(topic_mastery_id) : int
  foreign_key(question_id) : int
  rating : int
  time_taken : int
  is_correct : boolean
  xp_earned : int
}

User "1" -- "*" TopicMastery : has
Topic "1" -- "*" TopicMastery : has
Topic "1" -- "*" Question : contains
User "1" -- "*" Review : performs
TopicMastery "1" -- "*" Review : tracks
Question "1" -- "*" Review : appears in

@enduml